--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@chakra-ui/react": "^2.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/inter": "^4.5.10",
+    "@fontsource/open-sans": "^4.5.10",
+    "@iconscout/react-unicons": "^1.1.6",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
