--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/inter": "^4.5.10",
     "@fontsource/open-sans": "^4.5.10",
+    "@fontsource/quicksand": "^4.5.9",
     "@iconscout/react-unicons": "^1.1.6",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
