--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-devicons": "^2.14.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
