--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/open-sans": "^4.5.10",
     "@fontsource/quicksand": "^4.5.9",
     "@iconscout/react-unicons": "^1.1.6",
+    "@lottiefiles/react-lottie-player": "^3.4.7",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
